authentication and authorization

--- a/app/assets/stylesheets/feeds.scss
+++ b/app/assets/stylesheets/feeds.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the feeds controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#feeds{
+  padding: 20px;
+  font-size: 16px;
+  background-color: #d4d9e7;
+}
