--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,52 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
+
+<% if current_user %>
+<nav class="navbar navbar-default" id='navbar'>
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" >RSS Reader</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'All My Favorites', home_path %></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">  
+        <li><%= link_to "Logout", logout_path, method: :delete, id: "dropDownColor" %></li>
+      </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<% end %>
+
+  <% flash.each do |key, value| %>
+    <div class="col-md-4 col-md-offset-4 alert alert-danger error">
+        <% if key == "notice" %>
+          <%= content_tag :div, value, class: "error" %>
+        <% elsif key == "alert" %>
+          <%= content_tag :div, value, class: "error" %>
+        <% else %>
+          <%= content_tag :div, value, class: "error" %>
+        <% end %>
+      <% end %>  
+</div>
 
 <%= yield %>
 
