--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,5 +11,10 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require font-awesome
  *= require_self
  */
+ @import 'bootstrap';
+ @import "font-awesome";
+
+ body{font-family: 'Quicksand', sans-serif;}
