--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,7 +1,8 @@
-<h2><%= @title %></h2> 
-
-<% @feeds.each do |feed| %>
-<div>
-  <p>Headline: <%= feed.title %> &nbsp;&nbsp; <%= link_to "Heart This", fav_path(:entry_title => feed.title) %></p>
+<div class="col-md-8 col-md-offset-2">
+  <h1><%= @title %></h1> 
+  <% @feeds.each do |feed| %>
+  <div class="jumbotron" id="feeds">
+    <p><%= feed.title %> &nbsp;&nbsp; <i class="fa fa-heart-o"></i></p>
+  </div>
+  <% end %>
 </div>
-<% end %>
