--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to 'All My Favorites', home_path %></li>
+        <li><%= link_to 'All My Favorites', fav_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">  
         <li><%= link_to "Logout", logout_path, method: :delete, id: "dropDownColor" %></li>
